initial pre git commit

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Interactive Map</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-$END$
+<div class="map-container" id="mapContainer">
+    <div class="interactive-field" style="left: 21.9%; top: 3.2%; right: 69.4%; bottom: 78.8%;" data-info="Trawler Info"></div>
+    <div class="interactive-field" style="left: 43.5%; top: 35.8%; right: 47.8%; bottom: 46.1%;" data-info="Hafen Info"></div>
+    <div class="interactive-field" style="left: 47.0%; top: 71.4%; right: 44.2%; bottom: 10.6%;" data-info="Transport Info"></div>
+    <div class="interactive-field" style="left: 65.7%; top: 31.7%; right: 25.7%; bottom: 49.9%;" data-info="Kühlhaus Info"></div>
+    <div class="interactive-field" style="left: 74.3%; top: 73.9%; right: 17.0%; bottom: 7.9%;" data-info="Supermarkt Info"></div>
+    <div class="constants-field" style="left: 15.2%; top: 46.8%; right: 73.3%; bottom: 17.1%;" data-info="Konstanten"></div>
+    <div class="results-field" style="left: 75.4%; top: 4.8%; right: 12.0%; bottom: 39.6%;" data-info="Ergebnis"></div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
