post merge commit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div class="constants-field" style="left: 15.2%; top: 46.8%; right: 73.3%; bottom: 17.1%;" data-info="Konstanten"></div>
     <div class="results-field" style="left: 75.4%; top: 4.8%; right: 12.0%; bottom: 39.6%;" data-info="Ergebnis"></div>
 </div>
-<script src="main.js"></script>
+<script src="main.js" type="module"></script>
 </body>
 </html>
