--- a/intro.html
+++ b/intro.html
@@ -12,9 +12,14 @@
     <div class="popup-content">
       <h2>H2@School</h2>
       <p class="description">
-          Als Zusatzaufgabe haben wir uns überlegt die Wasserstoffrechnungen
+        Um die Anwendungsmöglichkeiten von Wasserstoff schon heute zu zeigen, haben wir eine Website programmiert.
         <br>
-        auf ein Echtweltbeispiel zu übertragen
+        Hier ist interaktiv der Weg des Kabeljaus, vom Fang bis in den Supermarkt, anhand eines Echtwelt Beispiels visualisiert.
+        <br>
+        Um sich den persönlichen Bedürfnissen und Veränderungen des Nutzers anzupassen, können die Parameter verändert
+        <br>
+        und das neu berechnete Ergebnis eingesehen werden.
+
 
         <br><br>
         Viel Spaß beim Erkunden und Ausprobieren!
