--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     <div class="interactive-field" style="left: 65.7%; top: 31.7%; right: 25.7%; bottom: 49.9%;" data-info="Kühlhaus Info"></div>
     <div class="interactive-field" style="left: 74.3%; top: 73.9%; right: 17.0%; bottom: 7.9%;" data-info="Supermarkt Info"></div>
     <div class="constants-field" style="left: 15.2%; top: 46.8%; right: 73.3%; bottom: 17.1%;" data-info="Konstanten"></div>
-    <div class="results-field" style="left: 75.4%; top: 4.8%; right: 12.0%; bottom: 39.6%;" data-info="Ergebnis"></div>
+    <div class="results-field" style="left: 75.4%; top: 4.8%; right: 12.0%; bottom: 39.6%;" data-info="Ergebnis">
+        <canvas id="resultsChart"></canvas>
+    </div>
+    <!--<canvas id="myChart" style="left: 75.4%; top: 10%; right: 12.0%; bottom: 39.6%;"></canvas> -->
+
 </div>
+
 <script src="main.js" type="module"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
