--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@
 <div id="overlay" class="overlay">
   <div class="popup">
     <div class="popup-content">
-      <h2>H2@School</h2>
+      <h2>Wertschöpfungskette</h2>
       <p class="description">
         Um die Anwendungsmöglichkeiten von Wasserstoff schon heute zu zeigen, haben wir eine Website programmiert.
         <br>
